--- a/style.css
+++ b/style.css
@@ -1,24 +1,83 @@
 
 body {
-    background-image: url(./images/paper.jpeg);
+    background-color: #2a2b36;
     background-size: 100% 100%;
     font-family: sans-serif;
+    color: #fff;
+}
+
+.heading {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 25px;
+    border: 2px solid #fff;
+    height: 30%;
+    margin-bottom: 10%;
+}
+
+.arrange {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+p.nice-para {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 h1, h3, h4 {
-    background-color: #454545;
     color: white;
     text-align: center;
     align-items: center;;
     font-family: Helvetica,  Arial, sans-serif;
+    margin: 10%;
+    
 }
 
 .list {
-    background-color: #454545;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
     color: white;
     text-align: center;
+    border-radius: 25px;
+    border: 2px solid #fff;
 
 }
+
+ul.main {
+    list-style: none;
+    
+}
+
+li.links {
+    border: 2px solid white;
+    border-radius: 25px;
+    margin: 10px;
+    padding: 5px;
+}
+
+li.links:hover {
+    background-color: #555;
+}
+
+ol {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+
+a {
+    text-decoration: none;;
+}
+
 
 img {
     height: 100%;
