--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 
 body {
     background-color: #2a2b36;
     background-size: 100% 100%;
-    font-family: sans-serif;
+    font-family: "Lexend Deca", sans-serif;
     color: #fff;
 }
 
@@ -11,9 +12,9 @@ body {
     justify-content: space-around;
     align-items: center;
     border-radius: 25px;
-    border: 2px solid #fff;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     height: 30%;
-    margin-bottom: 10%;
+    margin-bottom: 25vw;
 }
 
 .arrange {
@@ -22,10 +23,17 @@ body {
     justify-content: space-around;
 }
 
+.picture {
+    display: flex;
+    height: 400px;
+    width: auto;
+    margin-bottom: 15vw
+}
+
 p.nice-para {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 h1, h3, h4 {
@@ -45,7 +53,7 @@ h1, h3, h4 {
     color: white;
     text-align: center;
     border-radius: 25px;
-    border: 2px solid #fff;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
 }
 
@@ -55,10 +63,11 @@ ul.main {
 }
 
 li.links {
-    border: 2px solid white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 25px;
     margin: 10px;
-    padding: 5px;
+    padding: 20px;
+    
 }
 
 li.links:hover {
